# Chatterbox

./: .env.prod  .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
chat/: routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_message_image_alter_message_content.py  0003_alter_message_image.py
chat/tests/: test_consumers.py  test_views.py
chatterbox/: apps.py  consumers.py  forms.py  models.py  urls.py  utils.py  views.py
chatterbox/migrations/: 0001_initial.py  0002_message_image_alter_message_content.py  0003_alter_message_image.py
chatterbox/static/: main.css
chatterbox/static/js/: chat.js  file_upload.js  utils.js
chatterbox/templates/chatterbox/: base.html  chat.html  chat_list.html  create_chat.html
chatterbox/templatetags/: chatterbox_filters.py  convert_to_link.py  update_bg_color.py
chatterbox/tests/: test_consumers.py  test_forms.py  test_models.py  test_views.py
main/: asgi.py  settings.py  urls.py
rt_chat/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
rt_chat/migrations/: 0001_initial.py  0002_alter_chatgroup_name.py  0003_remove_message_group_privatechat_message_chat_and_more.py
rt_chat/static/: main.css
rt_chat/templates/rt_chat/: base.html  chat.html  chat_list.html  create_chat.html  create_group.html  test.html
static/: main.css
static/js/: chat.js  file_upload.js
templates/: base.html
templates/chat/: chat.html  chat_list.html  create_chat.html
templates/chatterbox/: chat.html  chat_list.html  create_chat.html
templates/email_templates/: new_message.html
templates/users/: account.html  login.html  register.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0003_alter_profile_avatar.py  0004_alter_profile_avatar.py  0005_alter_profile_avatar.py
users/templates/registration/: login.html  register.html
users/templates/users/: account.html
users/templatetags/: base64_encode.py  custom_filters.py
users/tests/: test_forms.py  test_models.py  test_views.py
