[project]
name = "chatterbox"
version = "0.1.0"
description = "Enables real-time chat conversations among users."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "autobahn==24.4.2",
    "automat==24.8.0",
    "brotli==1.1.0",
    "cffi==1.17.0",
    "channels==4.1.0",
    "channels-redis==4.2.0",
    "constantly==23.10.4",
    "crispy-bootstrap5==2024.2",
    "cryptography==44.0.1",
    "daphne==4.1.2",
    "dj-database-url==2.2.0",
    "django==5.1.10",
    "django-bootstrap5==24.2",
    "django-crispy-forms==2.3",
    "django-extensions==3.2.3",
    "hyperlink==21.0.0",
    "idna==3.7",
    "incremental==24.7.2",
    "msgpack==1.0.8",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "pyasn1==0.6.0",
    "pyasn1-modules==0.4.0",
    "pycparser==2.22",
    "pyopenssl==25.1.0",
    "python-dotenv==1.0.1",
    "redis==5.0.8",
    "service-identity==24.1.0",
    "sqlparse==0.5.1",
    "tomli==2.0.1",
    "twisted==24.7.0",
    "txaio==23.1.1",
    "typing-extensions==4.12.2",
    "whitenoise==6.7.0",
    "zope-interface==7.0.1",
]
