[project]
name = "chatterbox"
version = "0.1.0"
description = "Enables real-time chat conversations among users."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "autobahn==24.4.2",
    "automat==24.8.0",
    "brotli==1.1.0",
    "cffi==1.17.1",
    "channels==4.1.0",
    "channels-redis==4.2.0",
    "constantly==23.10.4",
    "crispy-bootstrap5==2025.6",
    "cryptography==45.0.7",
    "daphne==4.2.1",
    "dj-database-url==3.0.1",
    "django==5.2.7",
    "django-bootstrap5==25.2",
    "django-crispy-forms==2.4",
    "django-extensions==4.1",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "msgpack==1.1.1",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.0",
    "pycparser==2.23",
    "pyopenssl==25.3.0",
    "python-dotenv==1.1.1",
    "redis==5.0.8",
    "service-identity==24.2.0",
    "sqlparse==0.5.3",
    "tomli==2.2.1",
    "twisted==25.5.0",
    "txaio==25.6.1",
    "typing-extensions==4.15.0",
    "zope-interface==7.0.1",
]
